fix: reject null kit potion effects